[package]
name = "sigmoid-freud"
version = "0.1.0"
authors = ["Robert Escriva <robert@rescrv.net>"]
edition = "2024"
description = "A therapeutic roleplay assistant for exposure therapy, social anxiety practice, and communication skills development using LLMs"
license = "Apache-2.0"
repository = "https://github.com/rescrv/sigmoid-freud"
homepage = "https://github.com/rescrv/sigmoid-freud"
documentation = "https://docs.rs/sigmoid-freud"
readme = "README.md"
keywords = ["roleplay", "exposure-therapy", "social-anxiety", "communication", "cli"]
categories = ["command-line-utilities", "simulation", "games"]

[dependencies]
arrrg = "0.7.0"
arrrg_derive = "0.7.0"
getopts = "0.2.23"
minimal_signals = "0.4.0"
rustyline = { version = "16.0.0", features = ["derive"] }
serde = "1.0.219"
serde_json = "1.0.140"
shvar = "0.7.0"
tokio = { version = "1.46.1", features = ["full"] }
utf8path = "0.8.0"
yammer = "0.16.0"
